Cleaned up some flags